2008-04-04  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/bindings-second-mode.lisp: Add keys definitions to
	bind-or-jump in the second mode.

	* src/clfswm-util.lisp (bind-or-jump): remove the auto-defining
	macro for bind-or-jump-(1|2|3...).

	* src/clfswm-keys.lisp (define-define-key/mouse): Allow additional
	arguments to function. This allow to do things like:
 	(define-main-key (key) 'my-function 10 20 'foo) -> 10 20 and 'foo
	are passed to my-function on key press.

2008-04-03  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (bind-or-jump): New (great) function.

2008-04-02  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (child-fullname): New function

	* src/clfswm-info.lisp (info-mode-menu): Add an explicit optional
	docstring in info-mode-menu. An item can be 
	'((key function) (key function)) or with docstring
	'((key function "documentation 1") (key function "bla bla") (key function)) 

	* src/tools.lisp (ensure-n-elems): New function.

	* src/bindings-second-mode.lisp: Bind Alt+mouse-1/3 to move or
	resize a frame or the window's father.

	* src/clfswm.lisp (init-display): Remove tile-space-layout by
	default on the root frame.

	* src/clfswm-util.lisp (move/resize-frame): Add standard event
	hooks handlers (map-request, configure-notify...)

	* src/clfswm-internal.lisp (adapt-child-to-father): Limit minimal
	child size to 1x1.

2008-04-01  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/bindings.lisp: Bind Alt+mouse-1/3 to move or resize a frame
	or the window's father.

	* src/clfswm-util.lisp (mouse-click-to-focus-generic): Stop button
	event only if there is a geometry change.
	(mouse-focus-move/resize-generic): Generic function to move or
	resize a frame or a window father frame.

2008-04-01  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (show-all-children): Return t if there
	is a geometry change.
