@@ -7,9 +7,9 @@ URGENT PROBLEMS
 ===============
 Should handle these soon.
 
-Rewrote all useful code present in 0801 version.
-- Bind alt+1/2/3/4... to a particular child (current root and current child) [Philippe]
-  Open a menu: Space -> jump to child  Enter -> bind current child to key
+- Add a show-all-children without recomputation of geometry (ie: use real coordinates
+  and redisplay only the wanted child).  *** REALLY URGENT ***
+  Split computation of geometry outside of show-all-children. [Philippe]
 
 - Hook to open next window in named/numbered frame [Philippe]
 
@@ -34,10 +34,6 @@ Rewrote all useful code present in 0801 version.
 - Set Layout once [Philippe]
 
 - A Gimp layout example [Philippe]
-
-- Add a show-all-children without recomputation of geometry (ie: use real coordinates
-  and redisplay only the wanted child).
-  Split computation of geometry outside of show-all-children. [Philippe]
 
 
 
